fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.mySwiper {
+  width: min(36rem, 90%);
 }
